<resources>
    <string name="app_name">Bodynodes Sensor Dev</string>

    <string name="main_page_bt_enabled">
        Bluetooth on your phone is now enabled.
    </string>
    <string name="main_page_bt_not_enabled">
        Bluetooth on your phone was not enabled therefore your phone can\'t communicate.
        You can turn it on manually at any time.
    </string>
    <string name="main_page_bt_error">
        An error occurred during the request to activate the Bluetooth. Please check your settings and if your Bluetooth is working on your phone.
    </string>
    <string name="main_page_bt_adv_not_support">
        You have an old version of Android and BLE is not supported.
    </string>

    <string name="main_sensor_page_hello_text">Transform your phone in a Bodynodes sensor by pressing \"Start\".
        Remember to press \"Stop\" when you have finished.</string>

    <string name="main_sensor_page_start_wifi_button_text">Start WiFi</string>
    <string name="main_sensor_page_stop_wifi_button_text">Stop WiFi</string>
    <string name="main_sensor_page_start_bluetooth_button_text">Start Bluetooth</string>
    <string name="main_sensor_page_stop_bluetooth_button_text">Stop Bluetooth</string>
    <string name="main_sensor_page_start_ble_button_text">Start BLE</string>
    <string name="main_sensor_page_stop_ble_button_text">Stop BLE</string>

    <!--General messages-->
    <string name="message_sensor_not_supported">
        Your phone doesn\'t have the necessary sensors and the app can\'t work.\nPlease try with another smartphone.
    </string>

    <string name="main_sensor_select_sensortype">Please select at least one sensor type</string>
    <string name="wifi_permission_not_granted">Wifi permission has not been granted</string>
    <string name="notification_permission_not_granted">Notification permission has not been granted</string>
    <string name="main_sensor_absolute_orientation_str">Absolute Orientation</string>
    <string name="main_sensor_relative_acceleration_str">Relative Acceleration</string>

    <string name="main_thumb_name">Thumb</string>
    <string name="main_index_name">Index</string>
    <string name="main_middle_name">Middle</string>
    <string name="main_ring_name">Ring</string>
    <string name="main_pinkie_name">Pinkie</string>

    <!-- Strings used for fragments for navigation -->

    <string name="settings_wifi_host_ip_address_string">Host IP Address:</string>
    <string name="settings_wifi_save_button_str">Save</string>
    <string name="main_sensor_page_reset_button_text">Reset</string>
    <string name="main_sensor_page_settings_button_text">Settings</string>


    <string name="settings_glovebodypart_type_string">Glove body part:</string>
    <string name="settings_connection_type_string">Connection:</string>
    <string name="settings_connection_type_bluetooth_string">Bluetooth</string>
    <string name="settings_connection_type_wifi_string">WIFI</string>
    <string name="settings_connection_type_ble_string">BLE</string>
    <string name="settings_player_string">Player:</string>
    <string name="settings_bodypart_string">Body part:</string>
    <string name="settings_sensor_interval_string">Sensor interval (ms):</string>
    <string name="settings_glovebodypart_hand_left_string">Left Hand</string>
    <string name="settings_glovebodypart_hand_right_string">Right Hand</string>
    <string name="settings_glovebodypart_katana_string">Katana</string>
    <string name="wifi_multicast_group_string">Wifi Multicast Group</string>

</resources>
