<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".pages.SettingsActivity">

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        >
        <TextView
            android:padding="10sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_player_string"/>

        <EditText
            android:id="@+id/settings_player_name_edit"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:gravity="center_horizontal"
            android:inputType="text"/>

    </LinearLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        >
        <TextView
            android:padding="10sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_bodypart_string"/>

        <EditText
            android:id="@+id/settings_bodypart_edit"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:gravity="center_horizontal"
            android:inputType="text"/>

    </LinearLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        >
        <TextView
            android:padding="10sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wifi_multicast_group_string"/>

        <EditText
            android:id="@+id/wifi_multicast_group_edit"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:gravity="center_horizontal"
            android:inputType="text"/>

    </LinearLayout>
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        >
        <TextView
            android:padding="10sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_glovebodypart_type_string"/>

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            >
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                >

                <RadioButton
                    android:id="@+id/settings_connection_type_glovebodypart_left_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5sp"
                    android:text="@string/settings_glovebodypart_hand_left_string"
                    />

                <RadioButton
                    android:id="@+id/settings_connection_type_glovebodypart_right_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5sp"
                    android:text="@string/settings_glovebodypart_hand_right_string" />
            </RadioGroup>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        >
        <TextView
            android:padding="10sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_connection_type_string"/>

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            >
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                >

                <RadioButton
                    android:id="@+id/settings_connection_type_bluetooth_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5sp"
                    android:text="@string/settings_connection_type_bluetooth_string"
                    />

                <RadioButton
                    android:id="@+id/settings_connection_type_wifi_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5sp"
                    android:text="@string/settings_connection_type_wifi_string" />
            </RadioGroup>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        >
        <TextView
            android:padding="10sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_sensor_interval_string"/>

        <EditText
            android:id="@+id/settings_sensor_interval_ms_edit"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:gravity="center_horizontal"
            android:inputType="number"/>

    </LinearLayout>

    <Button
        android:id="@+id/settings_save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_wifi_save_button_str"/>

</LinearLayout>