<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pages.MainSensorActivity"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_sensor_page_hello_text"
            android:layout_margin="20dp"
            />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >

            <RelativeLayout
                android:id="@+id/main_sensor_katana_layout"
                android:layout_width="500px"
                android:layout_height="500px"
                android:background="@drawable/bg_katana_grey"
                android:layout_marginBottom="3dp"
                >
            </RelativeLayout>
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/main_sensor_sensortype_checklist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp"
            android:gravity="center_horizontal">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">
                <CheckBox
                    android:id="@+id/main_sensor_orientation_abs_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:layout_marginRight="6dp"
                    android:text="@string/main_sensor_absolute_orientation_str"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">
                <CheckBox
                    android:id="@+id/main_sensor_acceleration_rel_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:layout_marginRight="6dp"
                    android:text="@string/main_sensor_relative_acceleration_str"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/main_sensor_settings_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_sensor_page_settings_button_text"
                android:visibility="visible"
                />

            <Button
                android:id="@+id/main_sensor_start_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_sensor_page_start_button_text"
                android:visibility="visible"
                />

            <Button
                android:id="@+id/main_sensor_stop_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_sensor_page_stop_button_text"
                android:visibility="gone"
                />

            <ProgressBar
                android:id="@+id/main_sensor_progress_bar"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:visibility="gone"/>

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/main_sensor_glove_layout"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <!-- Thumb -->
            <RelativeLayout
                android:id="@+id/main_sensor_thumb_layout"
                android:layout_width="30dp"
                android:layout_height="100dp"
                android:layout_marginEnd="10dp" >

                <View
                    android:id="@+id/main_sensor_thumb_right"
                    android:layout_height="80dp"
                    android:layout_width="match_parent"
                    android:layout_alignParentBottom="true"
                    android:background="@color/btc_grey"  />

            </RelativeLayout>

            <View
                android:id="@+id/main_sensor_index_finger_right"
                android:layout_width="30dp"
                android:layout_height="100dp"
                android:layout_marginEnd="10dp"
                android:layout_toEndOf="@id/main_sensor_thumb_layout"
                android:background="@color/btc_grey" />

            <View
                android:id="@+id/main_sensor_middle_finger_right"
                android:layout_width="30dp"
                android:layout_height="100dp"
                android:layout_marginEnd="10dp"
                android:layout_toEndOf="@id/main_sensor_index_finger_right"
                android:background="@color/btc_grey" />

            <View
                android:id="@+id/main_sensor_ring_finger_right"
                android:layout_width="30dp"
                android:layout_height="100dp"
                android:layout_marginEnd="10dp"
                android:layout_toEndOf="@id/main_sensor_middle_finger_right"
                android:background="@color/btc_grey" />


            <!-- Little Finger -->
            <RelativeLayout
                android:id="@+id/main_sensor_little_finger_layout"
                android:layout_width="30dp"
                android:layout_toEndOf="@id/main_sensor_ring_finger_right"
                android:layout_height="100dp" >

                <View
                    android:id="@+id/main_sensor_little_finger_right"
                    android:layout_height="80dp"
                    android:layout_width="match_parent"
                    android:layout_alignParentBottom="true"
                    android:background="@color/btc_grey"  />

            </RelativeLayout>

            <!-- Palm -->
            <View
                android:id="@+id/main_sensor_palm_right"
                android:layout_width="150dp"
                android:layout_height="80dp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="40dp"
                android:layout_below="@id/main_sensor_middle_finger_right"
                android:background="@color/btc_grey" />

        </RelativeLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/katana_page_sensor_not_supported_popup"
        android:visibility="gone"
        android:background="@color/btc_red"
        android:textColor="#ffffff"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/message_sensor_not_supported"
        android:padding="20dp"
        />
</RelativeLayout>